# BugsBuzzy-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-development.yml  deploy-production.yml
accounts/: models.py  tests.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
